[tool.poetry]
name = "token-analysis"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^1.8.1"
plotly = "^5.6.0"
ipykernel = "^6.12.1"
networkx = "^2.7.1"
matplotlib = "^3.5.1"
node2vec = "^0.4.4"
ta = "^0.10.1"
japanize-matplotlib = "^1.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
